# DjangoProject

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  command.bat  pyproject.toml
core/: manage.py
core/core/utils/: collections.py  misc.py  settings.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
